--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <title>Sathvik Shivaprakash</title>
+    <link type="text/css" rel="stylesheet" href="indexstyle.css"/>
+</head>
 <body>
+ <h2 id="my_name">SATHVIK SHIVAPRAKASH</h2>
+<div id="profile_image">
+    <img src="profile_pic2.jpg" alt="profile_pic">
+</div>
+    
+<div id="heading">
+   
+</div>
+<div id="projects">
+    <div>
+        
+    </div>
+</div>
 
-<h1>My First Heading</h1>
-
-<p>My first paragraph.</p>
 
 </body>
 </html>
