--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link type="text/css" rel="stylesheet" href="indexstyle.css"/>
 </head>
 <body>
- <h2 id="my_name">SATHVIK SHIVAPRAKASH</h2>
+    
+<h2 id="my_name">Sathvik Shivaprakash</h2>
 <div id="profile_image">
     <img src="profile_pic2.jpg" alt="profile_pic">
 </div>
@@ -15,7 +16,7 @@
 </div>
 <div id="projects">
     <div>
-        
+    <div> </div>    
     </div>
 </div>
 
