added jquery jqueryui library

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <title>Sathvik Shivaprakash</title>
     <link type="text/css" rel="stylesheet" href="indexstyle.css"/>
+	<script src="jquery-1.11.1.js"></script>
+    <script src="jquery-ui.js"></script>
+    <script type="text/javascript" src="change_color.js"></script>
 </head>
 <body>
 <div id="heading">
@@ -10,9 +13,9 @@
 </div>
 <div id="navigaiton">
     <div id="navigation_items">
-        <p class="menu_items">Home</p>
-        <p class="menu_items">Projects</p>
-        <p class="menu_items">Contact me</p>
+        <div class ="menu_item_div"><p class="menu_items">Home</p></div>
+        <div class ="menu_item_div"><p class="menu_items">Projects</p></div>
+        <div class ="menu_item_div"><p class="menu_items">Contact me</p></div>
     </div>
 </div>
 <div id="projects">
