--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
 <div id="heading">
+    <div id="my_details">
+        <div><h2 class="my_details_text">Sathvik Shivaprakash</h2></div>
+        <div><p class="my_details_text">Masters student at The University of Texas at Arlington</p></div>
+        <div><p class="my_details_text">Email: sathvikshivaprakash519@gmail.com</p></div>
+        <div><p class="my_details_text">Cell: +1 682-560-1819</p></div>
+    </div>
    
 </div>
 <div id="navigaiton">
