--- a/index.html
+++ b/index.html
@@ -3,19 +3,33 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap 101 Template</title>
-
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <title>Sathvik Shivaprakash</title>
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 	<script src="js/bootstrap.min.js"></script>
 
   </head>
   <body>
-    
-	<div style="background: black; height: 100%;" class="container">
-		<h1 style="color:orange;">Hello, world!</h1>
+  
+	<div class="container">
+		<h1 style="color:orange;">Sathvik Shivaprakash</h1>
+  
+		<div class="row">
+		<div  style="background: black;" class="col-md-4">
+			<img  style="height:140px; width:140px; " src="pro_pic.jpg" alt="profile pic" class="img-rounded">
+		</div>
+		<div class="col-md-8">
+			.col-md-8
+		</div>
 	</div>
+
+	<div class="row">
+		<div class="col-md-6">.col-md-6</div>
+		<div class="col-md-6">.col-md-6</div>
+	</div> 
+</div>
+	
     
   </body>
 </html>
