--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script src="js/bootstrap.min.js"></script>
 <style>
 img{
-    display: block;
+  
     margin-left: auto;
     margin-right: auto;
 }
@@ -25,8 +25,8 @@ img{
         <div class="container">
             <p class="navbar-text">Sathvik Shivaprakash</p>
             <a  href="#"><button type="button" class="btn btn-default navbar-btn">Home</button></a>
-            <a  href="#"><button type="button" class="btn btn-success navbar-btn">Projects</button></a>
-            <a  href="#"><button type="button" class="btn btn-success navbar-btn">Resume</button></a>
+            <a  href="projects.html"><button type="button" class="btn btn-success navbar-btn">Projects</button></a>
+            <a  href="resume.html"><button type="button" class="btn btn-success navbar-btn">Resume</button></a>
         </div>
     </nav>
     
@@ -49,8 +49,8 @@ img{
     </div>
     
     <div class="row" style="margin-top:80px;" >
-        <div  style="margin-right:auto;margin-left:300px;width:50%;display:inline-flex;">
-            <h3>Follow me on : </h3>
+        <div  style="margin-right:auto;margin-left:auto;width:50%;display:inline-flex;">
+            <h3  style="margin-right:auto;margin-left:auto;">Follow me on : </h3>
             <img style="width:40px;height:40px;margin-top:auto;" src="icons/linkedin_follow.png" />
             <img style="width:40px;height:40px;margin-top:auto;" src="icons/fb_follow.png" />
             <img style="width:40px;height:40px;margin-top:auto;" src="icons/gplus_follow.png" />
