--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
         <div class="container">
             <p class="navbar-text">Sathvik Shivaprakash</p>
             <a  href="index.html"><button type="button" class="btn btn-success navbar-btn">Home</button></a>
-            <a  href="projects.html"><button type="button" class="btn btn-default navbar-btn">Projects</button></a>
+            <a  href="#"><button type="button" class="btn btn-default navbar-btn">Projects</button></a>
             <a  href="resume.html"><button type="button" class="btn btn-success navbar-btn">Resume</button></a>
         </div>
     </nav>
