minor changes in navbar

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ img{
       <!--style="color:orange;"  background-image: linear-gradient(rgba(100, 100, 100, 0.5),white);-->
 <div class="container" style="background-image: linear-gradient(rgba(100, 100, 100, 0.5),white);">
 		
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-inverse" role="navigation">
         <div class="container">
             <p class="navbar-text">Sathvik Shivaprakash</p>
             <a  href="#"><button type="button" class="btn btn-default navbar-btn">Home</button></a>
