--- a/projects.html
+++ b/projects.html
@@ -11,8 +11,8 @@
 </head>
 
 <body>
-<div class="container">
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+
+    <nav class="navbar navbar-inverse" role="navigation">
         <div class="container">
             <p class="navbar-text">Sathvik Shivaprakash</p>
             <a  href="index.html"><button type="button" class="btn btn-success navbar-btn">Home</button></a>
@@ -21,8 +21,8 @@
         </div>
     </nav>
     
-   
-    <div  style="margin-top:100px;" class="panel panel-default">
+<div class="container">   
+    <div  class="panel panel-default">
         <div class="panel-heading">Ukonnekt – Android Application (Spring 2014)</div>
         <div class="panel-body">
             An Android Application that was developed to make communication between professor and student better and faster. Professor is able to post assignments, announcements and grades. Syllabus meter is one of the unique features of the application. The application is designed using latest android user interface elements.
