--- a/resume.html
+++ b/resume.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <nav class="navbar navbar-inverse" role="navigation">
         <div class="container">
             <p class="navbar-text">Sathvik Shivaprakash</p>
             <a  href="index.html"><button type="button" class="btn btn-success navbar-btn">Home</button></a>
@@ -27,7 +27,7 @@
             <a  href="#"><button type="button" class="btn btn-default navbar-btn">Resume</button></a>
         </div>
     </nav>
-    <div class="container" style="margin-top:50px;">
+    <div class="container">
         <div style="margin-right:auto;margin-left:auto;width:80%;">
 
         <nav>
