--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
 <head>
     <title>Sathvik | Portfolio</title>
 
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.4/angular-material.min.css">
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.10.1/angular-material.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
     <meta name="viewport" content="initial-scale=1" />
     <style type="text/css">
-        #main_content {}
-        
         md-divider {
             margin-top: 10px;
             margin-bottom: 10px;
@@ -36,7 +34,11 @@
 <body ng-controller="portfolioCtrl">
     <div ng-controller="portfolioCtrl" layout="column">
         <md-toolbar style="background-color:#2196F3;" class="md-medium-tall" layout="column" md-scroll-shrink="false">
-            <span flex></span>
+            <span flex>
+                <md-button aria-label="label" class="md-icon-button">
+                    <md-icon md-svg-src="img/sathvik_photo.jpg"></md-icon>
+                </md-button>
+            </span>
             <span layout="row" layout-padding>
                 <!--<md-button aria-label="Menu" class="menu" hide-gt-sm><i class="fa fa-bars"></i></md-button>-->
                 <div class="md-toolbar-tools" flex>
@@ -54,10 +56,6 @@
 
         </div>
         <md-divider></md-divider>
-        <!-- Contact Section -->
-        <div id="contact_div">
-           
-        </div>
     </md-content>
     </div>
     <!-- Angular Material Dependencies -->
@@ -66,7 +64,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-aria.min.js"></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.9.4/angular-material.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.10.1/angular-material.min.js"></script>
     <script src="js/portfolio.js"></script>
 </body>
 
