--- a/pages/home.html
+++ b/pages/home.html
@@ -22,4 +22,30 @@
             </p>
         </div>
     </div>
+    <div class="lock-size" layout="row" layout-align="end end">
+        <md-fab-speed-dial md-open="fabSpeedDial.isOpen" md-direction="{{fabSpeedDial.selectedDirection}}" ng-class="fabSpeedDial.selectedMode">
+            <md-fab-trigger>
+                <md-button aria-label="menu" class="md-fab md-warn">
+                    <md-icon md-svg-src="img/icons/ic_contact.svg"></md-icon>
+                </md-button>
+            </md-fab-trigger>
+            <md-fab-actions>
+                <md-button aria-label="LinkedIn" class="md-fab md-raised md-mini" ng-click="openSocialLink('linkedin')">
+                    <md-icon md-svg-src="img/icons/linkedin.svg"></md-icon>
+                </md-button>
+                <md-button aria-label="twitter" class="md-fab md-raised md-mini" ng-click="openSocialLink('twitter')">
+                    <md-icon md-svg-src="img/icons/twitter.svg"></md-icon>
+                </md-button>
+                <md-button aria-label="facebook" class="md-fab md-raised md-mini" ng-click="openSocialLink('facebook')">
+                    <md-icon md-svg-src="img/icons/facebook.svg"></md-icon>
+                </md-button>
+                <md-button aria-label="Google Plus" class="md-fab md-raised md-mini" ng-click="openSocialLink('googleplus')">
+                    <md-icon md-svg-src="img/icons/google_plus.svg"></md-icon>
+                </md-button>
+                <md-button aria-label="Youtube" class="md-fab md-raised md-mini" ng-click="openSocialLink('youtube')">
+                    <md-icon md-svg-src="img/icons/youtube.svg"></md-icon>
+                </md-button>
+            </md-fab-actions>
+        </md-fab-speed-dial>
+    </div>
 </div>
