--- a/pages/resume.html
+++ b/pages/resume.html
@@ -1,13 +1,13 @@
-<!-- Resume Section -->
-<div id="resume_div">
-    <div layout="column" >
-        <a target="_self" href="pages/Resume.SathvikShivaprakash.FullTime.pdf" download="pages/Resume.SathvikShivaprakash.FullTime.pdf">
-            <md-button class="md-raised">
-                Download
-            </md-button>
-        </a>
+<div layout="column" layout-padding>
+    <div layout="row">
+        <div flex="33">
+            <a target="_self" href="pages/Resume.SathvikShivaprakash.FullTime.pdf"
+               download="pages/Resume.SathvikShivaprakash.FullTime.pdf">
+                <md-button class="md-raised">Download</md-button>
+            </a>
+        </div>
     </div>
-    <div layout="column" flex>
-        <iframe src="pages/Resume.SathvikShivaprakash.FullTime.pdf" style="width:100%; height:600px;"" frameborder="10"></iframe>    
+    <div layout="column">
+            <iframe src="pages/Resume.SathvikShivaprakash.FullTime.pdf" style="width:100%; height:500px;" frameborder="10"></iframe>
     </div>
 </div>
