--- a/index.html
+++ b/index.html
@@ -1,77 +1,51 @@
 <!DOCTYPE html>
-<html ng-app="portfolioApp">
-
+<html lang="en" ng-app="portfolioApp">
 <head>
-    <title>Sathvik | Portfolio</title>
+    <meta charset="UTF-8">
+    <title>Sathvik Shivaprakash</title>
 
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/0.10.1/angular-material.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=RobotoDraft:300,400,500,700,400italic">
-    <meta name="viewport" content="initial-scale=1" />
-    <style type="text/css">
-        md-divider {
-            margin-top: 10px;
-            margin-bottom: 10px;
-        }
-    </style>
-    <script>
-        (function(i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r;
-            i[r] = i[r] || function() {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date();
-            a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
-            a.async = 1;
-            a.src = g;
-            m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+    <!--JQuery-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
+    <!--Angular and Angular material dependencies-->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-aria.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0-rc1/angular-material.min.js"></script>
 
-        ga('create', 'UA-66675260-1', 'auto');
-        ga('send', 'pageview');
-    </script>
+    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0-rc1/angular-material.min.css">
+
+    <!-- Portfolio JS-->
+    <script src="js/portfolio.js" type="application/javascript"></script>
+    <script src="js/portfolioController.js" type="application/javascript"></script>
+
 </head>
-
-<body ng-controller="portfolioCtrl">
-    <div ng-controller="portfolioCtrl" layout="column">
-        <md-toolbar style="background-color:#2196F3;" class="md-medium-tall" layout="column" md-scroll-shrink="false">
-            <span flex>
-                <md-button aria-label="label" class="md-icon-button">
-                    <md-icon md-svg-src="img/sathvik_photo.jpg"></md-icon>
-                </md-button>
-            </span>
-            <span layout="row" layout-padding>
-                <!--<md-button aria-label="Menu" class="menu" hide-gt-sm><i class="fa fa-bars"></i></md-button>-->
-                <div class="md-toolbar-tools" flex>
-                    <h2 class="md-flex" style="color:white">Sathvik Shivaprakash</h2>
-                    <span flex="20"></span>
-            <span flex="10"><md-button id="home_btn" ng-click="goToPage('/')"><p style="color:white;">Home</p></md-button></span>
-            <span flex="10"><md-button id="resume_btn" ng-click="goToPage('/experience')"><p style="color:white;">Experience</p></md-button></span>
-            <span flex="10"><md-button id="projects_btn" ng-click="goToPage('/projects')"><p style="color:white;">Projects</p></md-button></span>
-            <span flex="10"><md-button id="resume_btn" ng-click="goToPage('/resume')"><p style="color:white;">Resume</p></md-button></span>
+<body layout="column" ng-controller="portfolioCtrl">
+<md-toolbar layout="row">
+    <div class="md-toolbar-tools">
+        <md-button ng-click="toggleSidenav('left')" hide-gt-sm class="md-icon-button">
+            <md-icon aria-label="Menu" md-svg-icon="https://s3-us-west-2.amazonaws.com/s.cdpn.io/68133/menu.svg">
+            </md-icon>
+        </md-button>
+        <h1>Sathvik Shivaprakash</h1>
     </div>
-    </span>
-    </md-toolbar>
-    <md-content layout="column" layout-padding id="main_content">
-        <div ng-view flex>
-
-        </div>
-        <md-divider></md-divider>
-    </md-content>
+</md-toolbar>
+<div layout="row" flex>
+    <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-4dp" md-component-id="left"
+                md-is-locked-open="$mdMedia('gt-sm')">
+        <md-button class="md-accent" ng-click="navigatePages('/')">Home</md-button>
+        <md-button class="md-accent" ng-click="navigatePages('/skills')">Skills</md-button>
+        <md-button class="md-accent" ng-click="navigatePages('/projects')">Projects</md-button>
+        <md-button class="md-accent" ng-click="navigatePages('/experience')">Experience</md-button>
+        <md-button class="md-accent" ng-click="navigatePages('/resume')">Resume</md-button>
+    </md-sidenav>
+    <div layout="column" flex id="content">
+        <!--<md-content layout="column" flex class="md-padding">
+            This Starter Application consists of a Toolbar, SideNav (with two buttons), and Content area.
+            <p>This is the content area! </p>
+        </md-content>-->
+        <div ng-view style=" overflow: auto; "></div>
     </div>
-    <!-- Angular Material Dependencies -->
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-route.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-aria.min.js"></script>
-
-    <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.10.1/angular-material.min.js"></script>
-    <script src="js/portfolio.js"></script>
+</div>
 </body>
-
 </html>
-
-<!-- 
-References
-1. https://scotch.io/tutorials/single-page-apps-with-angularjs-routing-and-templating
-2. http://www.bossable.com/1338/angular-material-design-toolbar-examples/
--->
