--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,12 +1,15 @@
-<!-- Projects Section -->
-<md-subheader>Academic Projects</md-subheader>
-<div id="projects_div">
-    <md-list>
-        <md-list-item ng-repeat="item in projects">
-            <div class="md-list-item-text">
-                <h4>{{ item.projectTitle }}</h4>
-                <p>{{item.projectDescription}}</p>
-            </div>
-        </md-list-item>
-    </md-list>
+<div layout="column" layout-padding>
+    <!-- Projects Section -->
+    <md-subheader>Academic Projects</md-subheader>
+    <div id="projects_div">
+        <md-list>
+            <md-list-item ng-repeat="item in projects">
+                <div class="md-list-item-text">
+                    <h4>{{ item.projectTitle }}</h4>
+
+                    <p>{{item.projectDescription}}</p>
+                </div>
+            </md-list-item>
+        </md-list>
+    </div>
 </div>
