--- a/index.html
+++ b/index.html
@@ -2,7 +2,14 @@
 <html lang="en" ng-app="portfolioApp">
 <head>
     <meta charset="UTF-8">
+
     <title>Sathvik Shivaprakash</title>
+    <meta name="viewport" content="initial-scale=1"/>
+    <meta name="description"
+          content="Seeking a full-time software engineering/development position, Computer Science graduate student.">
+    <meta name="keywords"
+          content="Sathvik Shivaprakash,Full time, computer science, graduate, student, software engineering, software development">
+    <meta name="author" content="Sathvik Shivaprakash">
 
     <!--JQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.js"></script>
@@ -13,7 +20,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-animate.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0-rc1/angular-material.min.js"></script>
 
-    <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0-rc1/angular-material.min.css">
+    <link rel="stylesheet"
+          href="https://ajax.googleapis.com/ajax/libs/angular_material/1.0.0-rc1/angular-material.min.css">
 
     <!-- Portfolio JS-->
     <script src="js/portfolio.js" type="application/javascript"></script>
