added newstabs section

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,22 +1,39 @@
 <div layout="column" layout-padding>
-    <div layout="row" >
+    <div layout="row">
         <img layout-align="center" src="img/profile_pic.JPG" style="margin: auto;max-height:200px;max-width: 200px ">
     </div>
     <div layout="row">
-        <div flex layout-padding> <!--Content-->
+        <md-content flex layout-padding> <!--Content-->
             <h2>Hey there, I am Sathvik Shivaprakash</h2>
+
             <p>
-                Currently pursuing my Master's from The University of Texas at Arlington in Computer Science. I did my Bachelor of Engineering in Computer science from B.N.M. Institute of Technology, Bangalore under Visvesvaraya Technological University.
+                Currently pursuing my Master's from The University of Texas at Arlington in Computer Science. I did my
+                Bachelor of Engineering in Computer science from B.N.M. Institute of Technology, Bangalore under
+                Visvesvaraya Technological University.
             </p>
+
             <p>
-                I am a very highly motivated, self driven person with a clear vision of my goals. I would always like to take up challenging and complex problems and find the most efficient solution to it.
+                I am a very highly motivated, self driven person with a clear vision of my goals. I would always like to
+                take up challenging and complex problems and find the most efficient solution to it.
             </p>
+
             <p>
                 From my childhood I was always fascinated by computers which made easy for me to choose my career path.
             </p>
+
             <p>
-                Have a look at all my projects in the "Projects" section. Currently I am looking for an intern position. Take a look at my resume in the "Resume" section.
+                Have a look at all my projects in the "Projects" section. Currently I am looking for an intern position.
+                Take a look at my resume in the "Resume" section.
             </p>
-        </div>
+        </md-content>
     </div>
+    <div layout="row" layout-md="column" layout-sm="column">
+        <!--<div flex>
+            fb
+        </div>
+        <div flex>
+            twi
+        </div>-->
+    </div>
+</div>
 </div>
