--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Sathvik Shivaprakash</title>
     <meta name="viewport" content="initial-scale=1"/>
     <meta name="description"
-          content="Seeking a full-time software engineering/development position, Computer Science graduate student.">
+          content="Seeking an full-time position where I can apply my skills and contribute to the growth of the organization.">
     <meta name="keywords"
           content="Sathvik Shivaprakash,Full time, computer science, graduate, student, software engineering, software development">
     <meta name="author" content="Sathvik Shivaprakash">
@@ -27,6 +27,23 @@
     <script src="js/portfolio.js" type="application/javascript"></script>
     <script src="js/portfolioController.js" type="application/javascript"></script>
 
+    <!--Google analytics -->
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function () {
+                        (i[r].q = i[r].q || []).push(arguments)
+                    }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                    m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-66675260-1', 'auto');
+        ga('send', 'pageview');
+    </script>
+
 </head>
 <body layout="column" ng-controller="portfolioCtrl">
 <md-toolbar layout="row">
@@ -45,6 +62,7 @@
         <md-button class="md-accent" ng-click="navigatePages('/skills')">Skills</md-button>
         <md-button class="md-accent" ng-click="navigatePages('/projects')">Projects</md-button>
         <md-button class="md-accent" ng-click="navigatePages('/experience')">Experience</md-button>
+        <md-button class="md-accent" ng-click="navigatePages('/newstabs')">NewsTabs app</md-button>
         <md-button class="md-accent" ng-click="navigatePages('/resume')">Resume</md-button>
     </md-sidenav>
     <div layout="column" flex id="content">
